# BezierAnimation

./: .gitignore  123.txt  CMakeLists.txt  README.md  bcurve.cpp  dupa.txt  jnadkjsadjkas.dupa  main.cpp  performance.txt  plan.md  point.cpp  point.hpp  pokaz.anim  test  test.txt  test1  towers  towers.anim  user.cpp  user.hpp
include/: action.hpp  animationManager.hpp  animationState.hpp  bcurve.hpp  drawer.hpp  frame.hpp  history.hpp  inputHandler.hpp  point.hpp  uiManager.hpp  user.hpp  userUtils.hpp
src/: animationManager.cpp  animationState.cpp  bcurve.cpp  drawer.cpp  frame.cpp  inputHandler.cpp  main.cpp  point.cpp  uiManager.cpp  user.cpp
